# mcBERT

./: LICENSE  README.md  extract_highly_variable_genes.py  inference.py  mcbert.ipynb  pretrain.py  pyproject.toml  requirements.txt  train.py
configs/configs_finetuning/: FineTune_heart_example.yaml
configs/configs_inference/: Inference_heart_example.yaml
configs/configs_pretraining/: Data2Vec_heart_example.yaml
data2vec/: data2vec.py  trainer.py
mcBERT/: encoder.py  preprocess_data.py
mcBERT/utils/: clustering_utils.py  metrics.py  patient_level_dataset.py  utils.py
